--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
     </style>
 </head>
 
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M9WQF8XB3W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M9WQF8XB3W');
+</script>
+
 <div id="inner-nav"></div>
     <div id="container">
         <div id="profile">
